--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h2>Welcome to DSAI chatbot</h2>
         <form action="/main" method="post">
             <p>Please enter your name </p>
-            <input type="text" name="q">
+            <input type="text" name="myName">
             <input type="submit" value="Enter">
         </form>
     </div>
