--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-    <h2>Main</h2>
+    <h2>"myName"</h2>
         <form action="/dbs" method="post">
             <input type="submit" value="Predict DBS price">
         </form>
