--- a/templates/llama.html
+++ b/templates/llama.html
@@ -9,7 +9,7 @@
     <h2>LLAMA chatbot via groq</h2>
         <form action="/llama_reply" method="post">
             <p>Please enter your query </p>
-            <input type="text" name="llama_query">
+            <input type="text" name="q">
             <input type="submit" value="Enter">
         </form>
     </div>
