--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-    <h2>myName</h2>
+    <h2>Hello {{myName}}</h2>
         <form action="/llama" method="post">
             <input type="submit" value="LLAMA chatbot via groq">
         </form>
